--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ html, body {
   padding: 0;
   font-family: 'Inter', sans-serif;
   background-color: #000;
-  background: url('assets/fondo.jpg') no-repeat center center;
+  background: url('../assets/fondo.jpg') no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
   color: #ffffff;
